--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>marcelopiresvieira</title>
 </head>
 <body>
-    
+    <header>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </header>
 </body>
 </html>
