--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>marcelopiresvieira</title>
 </head>
+
 <body>
     <header>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+        <ul class="nav-lista">
+            <li class="nav-item">rock</li>
+            <li class="nav-item">pagode</li>
+            <li class="nav-item">samba</li>
         </ul>
     </header>
 </body>
+
 </html>
