--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul class="nav-lista">
             <li class="nav-item">rock</li>
             <li class="nav-item">pagode</li>
-            <li class="nav-item">samba</li>
+            <li class="nav-item">white girl music</li>
         </ul>
     </header>
 </body>
