--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>marcelopiresvieira</title>
 </head>
@@ -12,11 +13,24 @@
 <body>
     <header>
         <ul class="nav-lista">
-            <li class="nav-item">rock</li>
+            <li class="nav-item">rock and roll</li>
             <li class="nav-item">pagode</li>
             <li class="nav-item">white girl music</li>
         </ul>
     </header>
+
+    <main>
+        <section class="secao">
+<div class="titulo_section">
+    <h1>rock and roll</h1>
+</div>
+<ul class="moldura_videos">
+    <li class="video"></li>
+    <li class="video"></li>
+    <li class="video"></li>
+</ul>
+        </section>
+    </main>
 </body>
 
 </html>
