--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <body>
     <header>
         <ul class="nav-lista">
-            <li class="nav-item">rock and roll</li>
+            <li class="nav-item">rock</li>
             <li class="nav-item">pagode</li>
-            <li class="nav-item">white girl music</li>
+            <li class="nav-item">girl music</li>
         </ul>
     </header>
 
     <main>
         <section class="secao">
 <div class="titulo_section">
-    <h1>rock and roll</h1>
+    <h1>rock</h1>
 </div>
 <ul class="moldura_videos">
     <li class="video"></li>
