--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 </div>
 <ul class="moldura_videos">
     <li class="video"></li>
-    <li class="video"></li>
-    <li class="video"></li>
+    <li class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/dAW8CoH_lN0?si=2vIv9VuR2Mq207Xf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
+    <li class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/B2lmOei7qfk?si=TcrSzCIPEjxZe1_y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
+    <li class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/0dpKit1Faaw?si=RiAmdLU6p3Iwbv1t" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
 </ul>
         </section>
     </main>
